added readme install

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -69,10 +69,14 @@
                 text-decoration: none;
                 list-style: none;
             }
+
+            .chatroomname {
+                text-align: center;
+            }
         </style>
     </head>
     <body>
-        <h1><%= chatname %></h1>
+        <h1 class="chatroomname"><%= chatname %></h1>
         <div id="chat-container">
             <div id="chat-messages">
                 <ul id="messages-go-here">
