--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    Welcome <%= username%>
+    <h1>Welcome <%= username%></h1>
+    <h2><a href="/chats">Join a chatroom</a></h2>
 </body>
 </html>
