fixed username cookie problem

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -77,6 +77,7 @@
     </head>
     <body>
         <h1 class="chatroomname"><%= chatname %></h1>
+        <h2>Username: <%= username %></h2>
         <div id="chat-container">
             <div id="chat-messages">
                 <ul id="messages-go-here">
