--- a/views/chatdashboard.ejs
+++ b/views/chatdashboard.ejs
@@ -24,16 +24,28 @@
         <button id="create_chat">Create chat</button>
     </body>
     <script>
-        document.getElementById("create_chat").addEventListener("click", () => {
+        document.getElementById("create_chat").addEventListener("click", async () => {
             const url = "/api/create";
-            const xhr = new XMLHttpRequest();
             const chatname = document.getElementById("chatname").value;
             const data = {
                 chatname: chatname,
             };
-            xhr.open("POST", url);
-            xhr.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
-            xhr.send(JSON.stringify(data));
+            const response = await fetch(url, {
+                method: "POST",
+                mode: "cors", // no-cors, *cors, same-origin
+                cache: "no-cache", // *default, no-cache, reload, force-cache, only-if-cached
+                credentials: "same-origin", // include, *same-origin, omit
+                headers: {
+                    "Content-Type": "application/json",
+                    // 'Content-Type': 'application/x-www-form-urlencoded',
+                },
+                redirect: "follow", // manual, *follow, error
+                referrerPolicy: "no-referrer", // no-referrer, *no-referrer-when-downgrade, origin, origin-when-cross-origin, same-origin, strict-origin, strict-origin-when-cross-origin, unsafe-url
+                body: JSON.stringify(data), // body data type must match "Content-Type" header
+            }).then((res) => {
+                console.log(res);
+                window.location.href = res.url;
+            });
         });
     </script>
 </html>
