--- a/linux_version/views/home.ejs
+++ b/linux_version/views/home.ejs
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Welcome <%= username%></h1>
-    <h2><a href="/chats">Join a chatroom</a></h2>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <style>
+            div {
+                display: inline-block;
+                padding-top: 10%;
+                text-align: center;
+                width: 100%;
+            }
+
+            a {
+                display: inline-block;
+                padding: 8px 16px;
+                background-color: black;
+                color: white;
+                border: none;
+                cursor: pointer;
+                text-align: center;
+                text-decoration: none;
+            }
+
+            a:hover {
+                background-color: #555;
+            }
+        </style>
+    </head>
+    <body>
+        <div>
+            <h1>Welcome <%= username%></h1>
+            <h2><a href="/chats">Join a chatroom</a></h2>
+        </div>
+    </body>
 </html>
