--- a/linux_version/views/login.ejs
+++ b/linux_version/views/login.ejs
@@ -37,7 +37,7 @@
             }
 
             button {
-                background-color: #333;
+                background-color: black;
                 color: #fff;
                 padding: 10px 15px;
                 border: none;
