--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,37 +8,46 @@
         <title>Your Website</title>
         <style>
             body {
-                font-family: Arial, sans-serif;
+                font-family: "Arial", sans-serif;
+                background-color: white;
+                color: black;
                 margin: 0;
                 padding: 0;
-                box-sizing: border-box;
-            }
-
-            nav {
-                background-color: #333;
-                overflow: hidden;
-            }
-
-            nav a {
-                float: left;
                 display: block;
+            }
+
+            a {
+                display: inline-block;
+                width: 60px;
+                padding: 8px 16px;
+                background-color: black;
                 color: white;
+                border: none;
+                cursor: pointer;
                 text-align: center;
-                padding: 14px 16px;
                 text-decoration: none;
             }
 
-            nav a:hover {
-                background-color: #ddd;
-                color: black;
+            a:hover {
+                background-color: #555;
+            }
+
+            .div {
+                display: inline-block;
+                padding-top: 10%;
+                text-align: center;
+                width: 100%;
             }
         </style>
     </head>
 
     <body>
-        <nav>
-            <a href="/register">Register</a>
-            <a href="/login">Login</a>
-        </nav>
+        <div class="div">
+            <H1>MyChat</H1>
+            <nav>
+                <a href="/register">Register</a>
+                <a href="/login">Login</a>
+            </nav>
+        </div>
     </body>
 </html>
