--- a/views/register.ejs
+++ b/views/register.ejs
@@ -33,7 +33,7 @@
         }
 
         button {
-            background-color: #333;
+            background-color: black;
             color: #fff;
             padding: 10px 15px;
             border: none;
