--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -116,6 +116,14 @@
                 obtainedMessageFromWsServer(e);
             };
 
+            const pingInterval = window.setInterval(() => {
+                const msg = {
+                    type: "ping"
+                }
+                ws.send(JSON.stringify(msg))
+                console.log("Sent ping")
+            }, 5000)
+
             function getCookie(cookieName) {
                 let cookie = {};
                 document.cookie.split(";").forEach(function (el) {
@@ -159,6 +167,8 @@
                 switch (msg.type) {
                     case "chatmessage":
                         domMessageCreater(msg.username, msg.text);
+                    case "pong":
+                        console.log("Recieve pong")
                 }
             }
 
